package com.tidbits.model.enums;

public enum OrderType {
    BUY,
    SELL
}
