package com.tidbits.model.enums;

public enum InstrumentType {
    STOCK,
    BOND,
    MUTUAL_FUND,
    ETF
}
