package com.tidbits.model.enums;

public enum LogStatus {
    SUCCESS,
    FAILURE
}
