package com.tidbits.model.enums;

public enum OrderStatus {
    CREATED,
    PENDING,
    PLACED,
    ACCEPTED,
    FILLED,
    CANCELED,
    REJECTED
}
