package com.tidbits.model.enums;

public enum RoleType {
    CLIENT,
    AUDITOR,
    REPORTER,
    ADMIN
}
