package com.tidbits.model.enums;

public enum TransactionType {
    BUY,
    SELL,
    DEPOSIT,
    WITHDRAW
}
